fix: 현장 대기의 대기자 이름을 따로 저장하지 않는 오류 수정 및 누락된 검증 로직 추가